updated about me section

--- a/about.html
+++ b/about.html
@@ -81,13 +81,17 @@
           <h1 class="mb-4">Thandokazi Notyalwa</h1>
           <h2 class="mb-4">Software Developer, based in Cape Town.</h2>
           <p class="mb-4">
-            I specialize in web development using HTML, CSS, JavaScript, Python, Node.js and React, 
-            with proficiency in MySQL, SQL, and MongoDB. Additionally, 
-            I have a keen eye for UI/UX design principles, ensuring user-friendly and visually appealing interfaces. 
-            Currently, I am gaining valuable experience as a full-stack Developer Candidate at CAPACITI, 
-            where I am honing my skills across the entire development stack.
+            I am passionate about technology and web development, with a strong foundation in coding, 
+            which I furthered with a certificate in this field. 
+            My expertise includes developing responsive web applications using 
+            React, JavaScript,Node.js, Python, Java, HTML and CSS. This background positions me well to benefit from 
+            and contribute to your prestigious program.
+            ensuring user-friendly and visually appealing
+            interfaces. Currently, I am gaining valuable experience as a
+            full-stack Developer Candidate at CAPACITI-UVU Africa, where I am honing my
+            skills across the entire development stack.
           </p>
-          <p class="mb-5">
+          <p class="mb-4">
             Solving complex problems and finding creative solutions are what drive me.
             I thrive in environments where i can tackle challenges and find innovative 
             ways to overcome them.
@@ -95,6 +99,7 @@
             I help business grow by crafting amazing web experiences.
             If you are looking for a developer that likes to get stuff done,
           </p>
+        
           <a href="work.html" class="btn btn-branding">See my projects</a>
         </div>
       </div>
