--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
       <div class="whatIDo">
         <h2>Web Application</h2>
         <p class="mb-4">
-          I design web applications that provide a wide range of functionalities and services to users across different devices, enabling businesses and organizations to deliver interactive and engaging experiences over the web.
+          I design web applications that provide a wide range of functionalities 
+          and services to users across different devices, 
+          enabling businesses and organizations to deliver interactive 
+          and engaging experiences over the web.
         </p>
         <a href="work.html" class="btn btn-branding-outline1">See more</a>
       </div>
@@ -86,7 +89,10 @@
       <div class="whatIDo">
         <h2>UI/UX Design</h2>
         <p class="mb-4">
-          I design UI/UX that prioritizes user satisfaction and efficiency. By focusing on intuitive design principles and seamless navigation, I aim to enhance the overall usability and functionality of products. Creating intuitive experiences that align with user expectations.
+          I design UI/UX that prioritizes user satisfaction and efficiency. 
+          By focusing on intuitive design principles and seamless navigation, 
+          I aim to enhance the overall usability and functionality of products. 
+          Creating intuitive experiences that align with user expectations.
         </p>
         <a href="work.html" class="btn btn-branding-outline1">See more</a>
       </div>
@@ -95,7 +101,9 @@
       <div class="whatIDo">
         <h2>Database</h2>
         <p class="mb-4">
-          I specialize in designing and optimizing databases to ensure efficient data management and retrieval. My focus is on creating robust database architectures that support scalability, performance, and data integrity, enabling seamless operations and informed decision-making.
+          My focus is on creating robust database architectures that support scalability, 
+          performance, and data integrity, enabling seamless operations and informed decision-making.
+          I specialize in designing and optimizing databases to ensure efficient data management and retrieval. 
         </p>
         <a href="work.html" class="btn btn-branding-outline1">See more</a>
       </div>
@@ -108,21 +116,30 @@
       <div class="col-md-6">
         <div class="content">
           <p class="mb-4">
-            I specialize in web development using HTML, CSS, JavaScript,
-            Python, Node.js and React, with proficiency in MySQL, SQL, and
-            MongoDB. Additionally, I have a keen eye for UI/UX design
-            principles, ensuring user-friendly and visually appealing
+            I am passionate about technology and web development, with a strong foundation in coding, 
+            which I furthered with a certificate in this field. 
+            My expertise includes developing responsive web applications using 
+            React, JavaScript, HTML, and CSS. This background positions me well to benefit from 
+            and contribute to your prestigious program.
+            ensuring user-friendly and visually appealing
             interfaces. Currently, I am gaining valuable experience as a
-            full-stack Developer Candidate at CAPACITI, where I am honing my
+            full-stack Developer Candidate at CAPACITI-UVU Africa, where I am honing my
             skills across the entire development stack.
           </p>
-          <p class="mb-5">
+          <p class="mb-4">
             Solving complex problems and finding creative solutions are what
             drive me. I thrive in environments where I can tackle challenges
             and find innovative ways to overcome them. Collaborating and
             achieving common goals as a team is what energizes me. I help
             businesses grow by crafting amazing web experiences. If you are
             looking for a developer that likes to get stuff done,
+          </p>
+          <p class="mb-4">
+            One of my notable achievements is my involvement in the City of Cape Town Hackathon project. 
+            This experience allowed me to apply my web development skills in a competitive setting, 
+            where I developed a solution to address local challenges. 
+            This project not only honed my technical skills but also enhanced my ability 
+            to work under pressure and collaborate effectively with diverse teams.
           </p>
           <a href="work.html" class="btn btn-branding">See my projects</a>
         </div>
